# petmoji

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  requirements.txt
backend/app/: main.py
backend/app/agent/: __init__.py  prompts.py  runner.py  tools.py
backend/app/converters/: __init__.py  base.py  gif.py  imessage.py  kakao.py  kakao_submission.py  sticker.py  wallpaper.py
backend/app/graph/: callbacks.py  nodes.py  prompts.py  state.py  wizard.py
backend/app/middleware/: tier.py
backend/app/models/: schemas.py  tiers.py
backend/app/routers/: agent.py  convert.py  emoji.py  emoji_stream.py  wizard.py
backend/app/services/: analyzer.py  caption.py  generator.py  overlay.py  validators.py
backend/app/utils/: upload.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_convert_api.py  test_converters.py  test_converters_base.py  test_generate_happy_path.py  test_rate_limit.py  test_security.py  test_validation.py  test_wizard.py
frontend/: .env.local.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json  wrangler.toml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: CustomPrompt.tsx  EmojiGrid.tsx  ErrorBoundary.tsx  FormatSelector.tsx  LoadingSpinner.tsx  PhotoUploader.tsx  ProviderSelector.tsx  SceneSelector.tsx  StyleSelector.tsx  TierSelector.tsx
frontend/src/lib/: api.ts  sse.ts  wizard-api.ts
frontend/src/types/: api.ts
(+8 files in other folders)
